[gd_scene load_steps=2 format=3 uid="uid://iw52x3chxeoe"]

[ext_resource type="Script" uid="uid://dp377ltilngum" path="res://scripts/view/ui/inventory_slot_view.gd" id="1_q2qw2"]

[node name="InventorySlotView" type="PanelContainer"]
custom_minimum_size = Vector2(48, 48)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_q2qw2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="IconTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 2
vertical_alignment = 2